2006-06-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* README.developer:  New files to introduce new developers
	* README.releasemgr: and release managers to Tcllib, the tools
	  available to support and ease their tasks, the procedures we
	  have in place, etc. For now they are more or less placeholders,
	  to be fleshed out with actual content over time.

	* installed_modules.tcl: Registered new module 'nmea'.

	* PACKAGES: Moved.
	* support/releases/PACKAGES: New location of PACKAGES.
	* sak.tcl: Updated to the new location of PACKAGES.

2006-06-30  Andreas Kupries <andreask@activestate.com>

	* installed_modules.tcl: Changed to a declarative style (more
	  amenable to automated processing).

2006-06-15  Andreas Kupries <andreask@activestate.com>

	* sak.tcl: Extended to allow the specification of a module M as
	  either M or modules/M. The latter is a path relative to the
	  topdir and enables the entering of modules through
	  tab-completion in the shell.

2006-05-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: New module 'base32'.

2006-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: New module 'transfer'.

2006-04-26  Andreas Kupries <andreask@activestate.com>

	* sak.tcl (gd-gen-tap): modified to strip non-version characters
	  out of version numbers.

2006-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* all.tcl: Removed the definitions of the common test constraints,
	  and the emulations of the 'wrongNumArgs' and 'tooManyArgs'
	  commands. These have all moved into the new common test support
	  code found in "devtools".

2005-11-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sak.tcl: Removed all functionality related to execution of
	  .timing files. They are superceded by the benchmarks provided
	  through .bench files.

	* modules/aes/aes.timing: Removed, superceded by .bench files.
	* modules/des/des.timing: